26/11/2006 Simon Newton <nomis52@westnet.com.au>

	* Updated examples to use the new API
	* Consolidated (most) functionallity into one program