@@ -1,3 +1,7 @@
+23/12/2006 Simon Newton <nomis52@westnet.com.au>
+
+	* Added the usbpro example
+
 26/11/2006 Simon Newton <nomis52@westnet.com.au>
 
 	* Updated examples to use the new API
